--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
     "formidable": "^3.5.4",
     "lucide-react": "^0.544.0",
     "next": "^15.5.4",
+    "openai": "^6.3.0",
+    "pdf-parse": "^2.3.0",
+    "pdf-poppler": "^0.2.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "sharp": "^0.34.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "tesseract.js": "^6.0.1"
@@ -34,6 +38,7 @@
     "@types/busboy": "^1.5.4",
     "@types/formidable": "^3.4.5",
     "@types/node": "^20",
+    "@types/pdf-parse": "^1.1.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
