--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.11.0",
     "@prisma/client": "^6.17.1",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@tinyhttp/content-disposition": "^2.2.2",
+    "bcrypt": "^6.0.0",
     "bootstrap": "^5.3.8",
     "busboy": "^1.6.0",
     "class-variance-authority": "^0.7.1",
@@ -22,11 +24,13 @@
     "formidable": "^3.5.4",
     "lucide-react": "^0.544.0",
     "next": "^15.5.4",
+    "next-auth": "^4.24.11",
     "openai": "^6.3.0",
     "pdf-parse": "^2.3.0",
-    "pdf-poppler": "^0.2.3",
+    "pdf2json": "^4.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "sharp": "^0.34.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
@@ -35,6 +39,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.14",
+    "@types/bcrypt": "^6.0.0",
     "@types/busboy": "^1.5.4",
     "@types/formidable": "^3.4.5",
     "@types/node": "^20",
